--- a/Calculadora/package.json
+++ b/Calculadora/package.json
@@ -16,6 +16,7 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "electron": "^1.6.2",
-    "electron-packager": "^8.6.0"
+    "electron-packager": "^8.6.0",
+    "electron-require": "^0.3.0"
   }
 }
